# Taskflow-Hub

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature.yml  task.yml  task_body.md
.github/workflows/: ci.yml
scripts/: gh_bootstrap.sh
services/api/: Dockerfile
services/worker_py/: Dockerfile
src/api/: main.py
src/common/: constants.py
src/worker_py/: worker.py
tests/: test_health.py
