[tool.poetry]
name = "taskflow-hub"
version = "0.1.0"
description = "Mini task orchestrator with Python & Go workers"
authors = ["You <you@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
psycopg = {extras = ["binary"], version="^3.2.1"}
redis = "^5.0.7"
httpx = "^0.27.0"
pymongo = "^4.8.0"
structlog = "^24.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
ruff = "^0.6.8"
black = "^24.8.0"
isort = "^5.13.2"
pre-commit = "^3.8.0"
coverage = "^7.6.1"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-select = ["I"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
